Update for Cobalt 0.3
We changed some things around, like moving the default posts path away
from _posts. With these fixes it should work fine.

--- a/src/.cobalt.yml
+++ b/src/.cobalt.yml
@@ -2,3 +2,4 @@ rss: rss.xml
 name: Amethyst
 description: Everything should be made as simple as possible, but no simpler.
 link: https://amethyst.rs
+posts: _posts
